--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "seainfo6150-webapp",
-  "homepage": "https://aprilbingham-neu.github.io/seainfo6150-final-project-webapp",
+  "homepage": "https://anita077.github.io/seainfo6150-final-project-webapp",
   "version": "0.1.0",
   "private": true,
   "proxy": "https://validator.w3.org/",
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-responsive-carousel": "^3.2.11",
     "react-router-dom": "5.2.0",
     "react-scripts": "3.0.0"
   },
